--- a/InterceptApi/Properties/launchSettings.json
+++ b/InterceptApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "InterceptApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7174;http://localhost:5174",
       "environmentVariables": {
